--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,11 +37,11 @@ jobs:
       - name: Run parser and binding tests
         uses: tree-sitter/parser-test-action@v2
         with:
-          test-rust: true
-          test-node: true
-          test-python: true
-          test-go: true
-          test-swift: true
+          test-rust: false
+          test-node: false
+          test-python: false
+          test-go: false
+          test-swift: false
   fuzz:
     name: Fuzz scanner
     runs-on: ubuntu-latest
