[ci] Disable Node test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: tree-sitter/parser-test-action@v2
         with:
           test-rust: false # panics and exit code 101, passes locally
-          test-node: true
+          test-node: false # bug in CLI: https://github.com/tree-sitter/tree-sitter/issues/4234
           test-python: true
           test-go: true
           test-swift: true
