Revert "Force tree-sitter peerDep install"
This reverts commit 0d500146d91e18678e522a2f88e33129f187428d.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "peerDependenciesMeta": {
     "tree-sitter": {
-      "optional": false
+      "optional": true
     }
   },
   "scripts": {
