--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
           test-node: false # bug in CLI: https://github.com/tree-sitter/tree-sitter/issues/4234
           test-python: true
           test-go: true
-          test-swift: true
+          test-swift: false # https://github.com/swift-actions/setup-swift/issues/739
   fuzz:
     name: Fuzz scanner
     runs-on: ubuntu-latest
